--- a/src/DateHandler.css
+++ b/src/DateHandler.css
@@ -4,6 +4,12 @@ header div{
     margin: 0 15px;
 }
 
+@media screen and (max-width: 640px) {
+    header div span{
+        display: none;
+    }
+}
+
 header div.right{
     float:right;
     cursor: pointer;
