--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 html{
     min-width: 325px;
     overflow-x: scroll;
+    font-family: 'Open Sans';
 }
 
 header{
     width: 100%;
-    padding: 15px 0px;
+    padding: 15px 0;
     text-align:center;
 }
